Fixed iframe height being too small

--- a/pages/news/news.css
+++ b/pages/news/news.css
@@ -4,7 +4,7 @@ html {
 
 iframe {
     padding: 0;
-    height: calc(100% - 100px);
+    height: calc(100vh - 100px);
     overflow: hidden;
     border: none;
     width: 100%;
